# old_pc

./: .gitignore
workspace/py-workspace/nipy/: pyproject.toml
workspace/py-workspace/nipy/nipy/: __init__.py
workspace/py-workspace/nipy/nipy.egg-info/: PKG-INFO  SOURCES.txt
workspace/py-workspace/nipy/nipy/core/: __init__.py  processors.py
workspace/py-workspace/nipy/nipy/db/: mongo_state.py
workspace/py-workspace/nipy/nipy/processors/: __init__.py  logging.py
workspace/py-workspace/nipy/nipy/queues/: __init__.py  ram_queues.py  redis_queues.py
workspace/py-workspace/nipy/nipy/utils/: __init__.py  generate.py
workspace/py-workspace/nipy/tests/: test_nipy.py
workspace/py-workspace/pypacker_wrapper/: pyproject.toml
workspace/py-workspace/pypacker_wrapper/pypacker_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workspace/py-workspace/pypacker_wrapper/pypacker_wrapper/parsers/: example.py  general_parser.py  my_layer.py
workspace/py-workspace/pypacker_wrapper/pypacker_wrapper/parsers/.mypy_cache/3.8/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  dataclasses.data.json  dataclasses.meta.json  genericpath.data.json  genericpath.meta.json  io.meta.json  itertools.data.json  itertools.meta.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.meta.json  types.meta.json  typing.meta.json
workspace/py-workspace/pypacker_wrapper/pypacker_wrapper/utils/: cap.py
workspace/py-workspace/pypacker_wrapper/tests/parsers/: test_my_parser.py
(+222 files in other folders)
