[tool.poetry]
name = "nipy"
version = "0.1.0"
description = ""
authors = ["ng <nadavgehasi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.10.1"
redis = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
