[tool.poetry]
name = "pypacker_wrapper"
version = "0.1.0"
description = ""
authors = ["ng <nadavgehasi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pypacker = "^4.9"
dpkt = "^1.9.2"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
